Update localization files.

--- a/src/main/resources/locale/locale_pl.properties
+++ b/src/main/resources/locale/locale_pl.properties
@@ -7,12 +7,12 @@ Acrobatics.Effect.2=Graceful Roll
 Acrobatics.Effect.3=Dwukrotnie bardziej efektywne niz zwykly Przewrot
 Acrobatics.Effect.4=Unik
 Acrobatics.Effect.5=Redukuje obrazenia od upadku o polowe
-Acrobatics.Listener=Acrobatics:
+Acrobatics.Listener=Akrobatyka:
 Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Rolled**
 Acrobatics.SkillName=AKROBATYKA
-Acrobatics.Skillup=[[YELLOW]]Acrobatics skill increased by {0}. Total ({1})
+Acrobatics.Skillup=[[YELLOW]]Umiejetnosc akrobatyka wzrosla o {0}. Razem ({1})
 Archery.Combat.DazeChance=[[RED]]Szansa na Oszolomienie: [[YELLOW]]{0}
 Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}
 Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
@@ -24,7 +24,7 @@ Archery.Effect.4=Arrow Retrieval
 Archery.Effect.5=Chance to retrieve arrows from corpses
 Archery.Listener=Archery:
 Archery.SkillName=LUCZNICTWO
-Archery.Skillup=[[YELLOW]]Archery skill increased by {0}. Total ({1})
+Archery.Skillup=[[YELLOW]]Umiejetnosc lucznictwo wzrosla o {0}. Razem ({1})
 Axes.Ability.Bonus.0=Axe Mastery
 Axes.Ability.Bonus.1=Bonus {0} damage
 Axes.Ability.Bonus.2=Armor Impact
@@ -43,9 +43,9 @@ Axes.Combat.SS.Length=[[RED]]Skull Splitter Length: [[YELLOW]]{0}s
 Axes.Effect.0=Skull Splitter (Ability)
 Axes.Effect.1=Deal AoE Damage
 Axes.Effect.2=Critical Strikes
-Axes.Effect.3=Double Damage
+Axes.Effect.3=Podwojne obrazania
 Axes.Effect.4=Axe Mastery
-Axes.Effect.5=Adds bonus DMG
+Axes.Effect.5=Dodaje bonus do obrazen
 Axes.Effect.6=Armor Impact
 Axes.Effect.7=Strike with enough force to shatter armor
 Axes.Effect.8=Greater Impact
@@ -57,7 +57,7 @@ Axes.Skills.SS.On=[[GREEN]]**Skull Splitter ACTIVATED**
 Axes.Skills.SS.Refresh=[[GREEN]]Your [[YELLOW]]Skull Splitter [[GREEN]]ability is refreshed!
 Axes.Skills.SS.Other.Off=[[RED]]Skull Splitter[[GREEN]] has worn off for [[YELLOW]]{0}
 Axes.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Skull Splitter!
-Axes.Skillup=[[YELLOW]]Axes skill increased by {0}. Total ({1})
+Axes.Skillup=[[YELLOW]]Umiejetnosc scinanie wzrosla o {0}. Razem ({1})
 Excavation.Ability.Lower=[[GRAY]]**YOU LOWER YOUR SHOVEL**
 Excavation.Ability.Ready=[[GREEN]]**YOU READY YOUR SHOVEL**
 Excavation.Effect.0=Giga Drill Breaker (ABILITY)
@@ -72,7 +72,7 @@ Excavation.Skills.GigaDrillBreaker.On=[[GREEN]]**GIGA DRILL BREAKER ACTIVATED**
 Excavation.Skills.GigaDrillBreaker.Refresh=[[GREEN]]Your [[YELLOW]]Giga Drill Breaker [[GREEN]]ability is refreshed!
 Excavation.Skills.GigaDrillBreaker.Other.Off=[[RED]]Giga Drill Breaker[[GREEN]] has worn off for [[YELLOW]]{0}
 Excavation.Skills.GigaDrillBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Giga Drill Breaker!
-Excavation.Skillup=[[YELLOW]]Excavation skill increased by {0}. Total ({1})
+Excavation.Skillup=[[YELLOW]]Umiejetnosc kopania wzrosla o {0}. Razem({1})
 Fishing.Ability.Info=[[RED]]Magic Hunter: [[GRAY]] **Improves With Treasure Hunter Rank**
 Fishing.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (SHAKE)
 Fishing.Ability.Rank=[[RED]]Ranga lowienia skarbow: [[YELLOW]]{0}/5
@@ -179,7 +179,7 @@ Repair.Effect.3=Increased repair amount
 Repair.Effect.4=Super Naprawa
 Repair.Effect.5=Podw\u00f3jnie efektywne
 Repair.Effect.6=Diamond Repair ({0}+ SKILL)
-Repair.Effect.7=Repair Diamond Tools & Armor
+Repair.Effect.7=Naprawa diamentowych narzedzi i pancerza
 Repair.Effect.8=Arcane Forging
 Repair.Effect.9=Naprawa rzeczy magicznych
 Repair.Effect.16=Salvage ({0}+ SKILL)
@@ -188,12 +188,12 @@ Repair.Error=[[DARK_RED]]mcMMO encountered an error attempting to repair this it
 Repair.Listener.Anvil=[[DARK_RED]]You have placed an anvil, anvils can repair tools and armor.
 Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
 Repair.Listener=Naprawa:
-Repair.SkillName=REPAIR
+Repair.SkillName=Naprawa
 Repair.Skills.AdeptSalvage=[[DARK_RED]]You\'re not skilled enough to Salvage items.
 Repair.Skills.AdeptDiamond=[[DARK_RED]]You\'re not skilled enough to repair Diamond.
-Repair.Skills.AdeptGold=[[DARK_RED]]You\'re not skilled enough to repair Gold.
+Repair.Skills.AdeptGold=[[DARK_RED]]Masz za niski poziom aby naprawiac zloto.
 Repair.Skills.AdeptIron=[[DARK_RED]]You\'re not skilled enough to repair Iron.
-Repair.Skills.AdeptStone=[[DARK_RED]]You\'re not skilled enough to repair Stone.
+Repair.Skills.AdeptStone=[[DARK_RED]]Masz za niski poziom aby naprawic kamien.
 Repair.Skills.Adept=[[RED]]You must be level [[YELLOW]]{0}[[RED]] to repair [[YELLOW]]{1}
 Repair.Skills.FeltEasy=[[GRAY]]That felt easy.
 Repair.Skills.FullDurability=[[GRAY]]That is at full durability.
@@ -202,7 +202,7 @@ Repair.Skills.NotFullDurability=[[DARK_RED]]You can\'t salvage damaged items.
 Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
 Repair.Skills.StackedItems=[[DARK_RED]]You can\'t repair stacked items.
 Repair.Skills.Super.Chance=[[RED]]Szansa na Super Naprawe: [[YELLOW]]{0}
-Repair.Skillup=[[YELLOW]]Repair skill increased by {0}. Total ({1})
+Repair.Skillup=[[YELLOW]]Umiejetnosc naprawiania wzrosla o {0}. Razem ({1})
 Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}%
 Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}%
 Repair.Arcane.Downgrade=[[RED]]Arcane power has decreased for this item.
@@ -276,7 +276,7 @@ Taming.Effect.9=DMG Reduction, Fire Resistance
 Taming.Listener.Wolf=[[DARK_GRAY]]Your wolf scurries back to you...
 Taming.Listener=Taming:
 Taming.SkillName=TAMING
-Taming.Skillup=[[YELLOW]]Taming skill increased by {0}. Total ({1})
+Taming.Skillup=[[YELLOW]]Umiejetnosc oswajania wzrosla o {0}. Razem ({1})
 Taming.Summon.Complete=[[GREEN]]Summoning complete
 Taming.Summon.Fail.Ocelot=[[RED]]You have too many ocelots nearby to summon any more.
 Taming.Summon.Fail.Wolf=[[RED]]You have too many wolves nearby to summon any more.
@@ -300,7 +300,7 @@ Unarmed.Effect.6=Odbicie strzaly
 Unarmed.Effect.7=Odbijanie strzal
 Unarmed.Effect.8=Iron Grip
 Unarmed.Effect.9=Prevents you from being disarmed
-Unarmed.Listener=Unarmed:
+Unarmed.Listener=Bezbronny:
 Unarmed.SkillName=UNARMED
 Unarmed.Skills.Berserk.Off=[[RED]]**Berserk has worn off**
 Unarmed.Skills.Berserk.On=[[GREEN]]**BERSERK ACTIVATED**
@@ -354,15 +354,15 @@ Commands.Ability.On=Ability use toggled [[GREEN]]on
 Commands.AdminChat.Off=Admin Chat only [[RED]]Off
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
 Commands.AdminChat.Prefix=[[AQUA]][[[WHITE]]{0}[[AQUA]]]
-Commands.AdminToggle=[[RED]]- Toggle admin chat
+Commands.AdminToggle=[[RED]]- Wlacza/wylacza czat adminow
 Commands.Chat.Console=*Console*
-Commands.Disabled=[[RED]]This command is disabled.
+Commands.Disabled=[[RED]]Komenda ta jest wylaczona.
 Commands.DoesNotExist=[[RED]]Player does not exist in the database!
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Godmode Disabled
 Commands.GodMode.Enabled=[[YELLOW]]mcMMO Godmode Enabled
 Commands.GodMode.Forbidden=[mcMMO] God Mode not permitted on this world (See Permissions)
 Commands.Inspect=<player> [[RED]]- View detailed player info
-Commands.Invite.Accepted=[[GREEN]]Invite Accepted. You have joined party {0}
+Commands.Invite.Accepted=[[GREEN]]Zaproszenie zaakceptowane. Dolaczyles do grupy {0}
 Commands.Invite.Success=[[GREEN]]Pomyslnie wyslano zaproszenie
 Commands.Leaderboards=<skill> <page> [[RED]]- Rankingi
 Commands.mcc.Header=[[RED]]---[][[YELLOW]]mcMMO Commands[[RED]][]---
@@ -385,17 +385,17 @@ Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Read brief mod description
 Commands.NoConsole=This command does not support console usage.
 Commands.Other=[[GREEN]]--OTHER COMMANDS--
-Commands.Party.Accept=[[RED]]- Accept party invite
+Commands.Party.Accept=[[RED]]- Akceptuje zaproszenie grupy
 Commands.Party.Chat.Off=Party Chat only [[RED]]Off
 Commands.Party.Chat.On=Party Chat only [[GREEN]]On
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--PARTY COMMANDS--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]You have received a party invite for {0} from {1}
-Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/accept[[YELLOW]] to accept the invite
+Commands.Party.Invite.1=[[YELLOW]]Napisz [[GREEN]]/accept[[YELLOW]] aby zaakceptowac zaproszenie
 Commands.Party.Invite=<player> [[RED]]- Send party invite
 Commands.Party.Join=Dolaczyles do Grupy: {0}
 Commands.Party.Kick=[[RED]]Zosta\u0142e\u015b wyrzucony z dru\u017cyny {0}!
-Commands.Party.Leave=[[RED]]You have left that party
+Commands.Party.Leave=[[RED]]Opusciles grupe
 Commands.Party.Members=[[GREEN]]Party Members: {0}
 Commands.Party.None=[[RED]]You are not in a party.
 Commands.Party.Quit=[[RED]]- Leave your current party
@@ -450,12 +450,12 @@ Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player=[[GREEN]]You are now the party leader.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]]Haslo grupy zmienione na: {0}
-Party.Player.Invalid=[[RED]]That is not a valid player.
+Party.Player.Invalid=[[RED]]Nie ma takiego gracza.
 Party.Teleport.Dead=[[RED]]Nie mo\u017cesz si\u0119 teleportowa\u0107 do zmar\u0142ego gracza.
 Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
-Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
+Party.Teleport.Target=[[GREEN]]{0} zostal teleportowany do Ciebie.
 Party.Unlocked=[[GRAY]]Grupa jest otwarta dla wszystkich.
 Commands.XPGain.Acrobatics=Upadanie
 Commands.XPGain.Archery=Attacking Monsters
@@ -465,7 +465,7 @@ Commands.XPGain.Fishing=Fishing (Go figure!)
 Commands.XPGain.Herbalism=Zbieranie Zi\u00f3\u0142
 Commands.XPGain.Mining=Wydobywa Kamie\u0144 i Surowce
 Commands.XPGain.Repair=Naprawianie
-Commands.XPGain.Swords=Attacking Monsters
+Commands.XPGain.Swords=Atak potworow
 Commands.XPGain.Taming=Oswoj zwierze, lub walcz ze swoimi wilkami.
 Commands.XPGain.Unarmed=Attacking Monsters
 Commands.XPGain.Woodcutting=Chopping down trees
@@ -496,6 +496,7 @@ Guides.Page.Invalid=Not a valid page number!
 Guides.Page.OutOfRange=That page does not exist, there are only {0} total pages.
 Guides.Repair=[[DARK_AQUA]]About Repair:\n[[YELLOW]]Repair allows you to use an iron block to repair armor and\n[[YELLOW]]tools, or a gold block to salvage armor and tools.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]Repair tools or armor using the mcMMO Anvil. This is an\n[[YELLOW]]iron block by default and should not be confused with\n[[YELLOW]]the Vanilla Minecraft Anvil.\n[[DARK_AQUA]]How can I use Repair?\n[[YELLOW]]Place down a mcMMO Anvil and right-click to repair the item \n[[YELLOW]]you\'re currently holding. This consumes 1 item on every use.\n\n[[DARK_AQUA]]How does Repair Mastery work?\n[[YELLOW]]Repair Mastery increases the repair amount. The extra amount\n[[YELLOW]]repaired is influenced by your Repair skill level.\n\n[[DARK_AQUA]]How does Super Repair work?\n[[YELLOW]]Super Repair is a passive ability. When repairing an item,\n[[YELLOW]]it grants players a chance to repair an item with\n[[YELLOW]]double effectiveness.\n\n\n\n\n[[DARK_AQUA]]How does Arcane Forging work?\n[[YELLOW]]This passive ability allows you to repair items with a certain\n[[YELLOW]]chance of maintaining its enchantments. The enchants may be\n[[YELLOW]]kept at their existing levels, downgraded to a lower level,\n[[YELLOW]]or lost entirely.\n\n\n\n[[DARK_AQUA]]How does Salvage work?\n[[YELLOW]]Place down a mcMMO Salvage Anvil and right-click to salvage\n[[YELLOW]]the item you\'re currently holding.\n[[YELLOW]]This will break the item apart en give back the used ingots.\n[[YELLOW]]Note: You can only salvage fully repaired tools or armor.
 Guides.Swords=[[DARK_AQUA]]About Swords:\n[[YELLOW]]This skill awards combat bonuses to anyone fighting with a\n[[YELLOW]]sword.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]XP is gained based on the amount of damage dealt to mobs or \n[[YELLOW]]other players when wielding a sword.\n\n[[DARK_AQUA]]How does Serrated Strikes work?\n[[YELLOW]]Serrated Strikes is an active ability, you can activate it by\n[[YELLOW]]right-clicking with a sword. This ability allows you to deal \n[[YELLOW]]an AoE (Area of Effect) hit. This AoE will do a bonus 25%\n[[YELLOW]]damage and will inflict a bleed effect that lasts for 5 ticks.\n\n\n\n[[DARK_AQUA]]How does Counter Attack work?\n[[YELLOW]]Counter Attack is a passive ability. When taking hits from mobs,\n[[YELLOW]]you will have a chance to reflect 50% of the damage that was \n[[YELLOW]]taken.\n\n\n\n\n[[DARK_AQUA]]How does Bleed work?\n[[YELLOW]]Bleed causes enemies to take damage every two seconds. The \n[[YELLOW]]target will bleed until the effect wears off, or death, \n[[YELLOW]]whichever comes first.\n[[YELLOW]]The duration of the bleed is increased by your sword skill.
+Guides.Smelting=Coming soon...
 Guides.Taming=[[DARK_AQUA]]About Taming:\n[[YELLOW]]Taming will give players various combat bonuses when using\n[[YELLOW]]tamed wolves.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill, you need to tame wolves/ocelots or\n[[YELLOW]]get into combat with your wolves.\n\n[[DARK_AQUA]]How does Call of the Wild work?\n[[YELLOW]]Call of the Wild is an active ability that will allow you to summon\n[[YELLOW]]a wolf or an ocelot by your side. You can do this by\n[[YELLOW]]left-clicking while holding bones or fish.\n\n[[DARK_AQUA]]How does Beast Lore work?\n[[YELLOW]]Beast Lore allows players to inspect pets and to check the\n[[YELLOW]]stats of wolves and ocelots. Left-click a wolf or ocelot to use\n[[YELLOW]]Beast Lore.\n[[DARK_AQUA]]How does Gore work?\n[[YELLOW]]Gore is a passive ability that has a chance of inflicting a\n[[YELLOW]]bleeding effect on your wolves\' targets.\n\n[[DARK_AQUA]]How does Sharpened Claws work?\n[[YELLOW]]Sharpened Claws provides a damage bonus to damage dealt\n[[YELLOW]]by wolves. The damage bonus depends on your Taming level.\n\n[[DARK_AQUA]]How does Environmentally Aware work?\n[[YELLOW]]This passive ability will allow wolves to teleport to you when\n[[YELLOW]]they get near hazards, such as Cacti/Lava. It will also give\n[[YELLOW]]wolves fall damage immunity.\n\n[[DARK_AQUA]]How does Thick Fur work?\n[[YELLOW]]This passive ability will reduce damage and make wolves\n[[YELLOW]]fire resistant.\n[[DARK_AQUA]]How does Shock Proof work?\n[[YELLOW]]This passive ability reduces damage done to wolves\n[[YELLOW]]from explosions.\n[[DARK_AQUA]]How does Fast Food Service work?\n[[YELLOW]]This passive ability gives wolves a chance to heal whenever\n[[YELLOW]]they perform an attack.
 Guides.Unarmed=[[DARK_AQUA]]About Unarmed:\n[[YELLOW]]Unarmed will give players various combat bonuses when using\n[[YELLOW]]your fists as a weapon. \n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]XP is gained based on the amount of damage dealt to mobs \n[[YELLOW]]or other players when unarmed.\n\n[[DARK_AQUA]]How does Berserk work?\n[[YELLOW]]Beserk is an active ability that is activated by\n[[YELLOW]]right-clicking. While in Beserk mode, you deal 50% more\n[[YELLOW]]damage and you can break weak materials instantly, such as\n[[YELLOW]]Dirt and Grass.\n[[DARK_AQUA]]How does Iron Arm work?\n[[YELLOW]]Iron Arm increases the damage dealt when hitting mobs or\n[[YELLOW]]players with your fists.\n[[DARK_AQUA]]How does Arrow Deflect work?\n[[YELLOW]]Arrow Deflect is a passive ability that gives you a chance\n[[YELLOW]]to deflect arrows shot by Skeletons or other players.\n[[YELLOW]]The arrow will fall harmlessly to the ground.\n\n[[DARK_AQUA]]How does Iron Grip work?\n[[YELLOW]]Iron Grip is a passive ability that counters disarm. As your\n[[YELLOW]]unarmed level increases, the chance of preventing a disarm increases.\n[[DARK_AQUA]]How does Disarm work?\n[[YELLOW]]This passive ability allows players to disarm other players,\n[[YELLOW]]causing the target\'s equipped item to fall to the ground.
 Guides.Usage=[[RED]] Usage is /{0} ? [page]
@@ -513,7 +514,7 @@ Skills.NeedMore=[[DARK_RED]]Potrzebujesz wiecej
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Skills.TooTired=[[RED]]Musisz odpoczac zanim ponownie uzyjesz tej umiejetnosci.
 Stats.Header.Combat=[[GOLD]]-=UMIEJ\u0118TNO\u015aCI BOJOWE=-
-Stats.Header.Gathering=[[GOLD]]-=GATHERING SKILLS=-
+Stats.Header.Gathering=[[GOLD]]-=Umiejetnosci zbierania=-
 Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Statystyki
 Perks.xp.name=Experience
@@ -549,3 +550,20 @@ MOTD.PerksPrefix=[[RED]][mcMMO Perks]
 MOTD.Vampire.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Vampirism Stat Leech: [[DARK_RED]]{0}%
 MOTD.Version=[[GOLD]][mcMMO] Running version [[DARK_AQUA]]{0}
 MOTD.Website=[[GOLD]][mcMMO] [[GREEN]]{0}[[YELLOW]] - mcMMO Website
+Smelting.Ability.FluxMining=[[RED]]Flux Mining Chance: [[YELLOW]]{0}
+Smelting.Ability.FuelEfficiency=[[RED]]Fuel Efficiency Multiplier: [[YELLOW]]{0}x
+Smelting.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (VANILLA XP BOOST)
+Smelting.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (FLUX MINING)
+Smelting.Ability.SecondSmelt=[[RED]]Second Smelt Chance: [[YELLOW]{0}
+Smelting.Ability.VanillaXPBoost=[[RED]]Vanilla XP Multiplier: [[YELLOW]]{0}x
+Smelting.Effect.0=Fuel Efficiency
+Smelting.Effect.1=Increase the burn time of fuel used in furnaces when smelting
+Smelting.Effect.2=Second Smelt
+Smelting.Effect.3=Double the resources gained from smelting
+Smelting.Effect.4=Vanilla XP Boost
+Smelting.Effect.5=Increase vanilla XP gained while smelting
+Smelting.Effect.6=Flux Mining
+Smelting.Effect.7=Chance for ores to be instantly smelted while mining
+Smelting.FluxMining.Success=[[GREEN]]That ore smelted itself!
+Smelting.Listener=Smelting:
+Smelting.SkillName=SMELTING
