Fix typo in Iron Grip skill display formatting. Fixes #575

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -285,7 +285,7 @@ Unarmed.Ability.Bonus.0=Styl \u017eelezn\u00e9 pa\u017ee
 Unarmed.Ability.Bonus.1=+{0} Zv\u00fd\u0161en\u00ed zran\u011bn\u00ed
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]\u0160ance na vych\u00edlen\u00ed \u0161\u00edpu: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]\u0160ance na odzbrojen\u00ed: [[YELLOW]]{0}
-Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]Your opponent has an iron grip!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being disarmed!
 Unarmed.Ability.Lower=[[GRAY]]**SKL\u00c1N\u00cd\u0160 SV\u00c9 P\u011aSTI**
