--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -285,7 +285,7 @@ Unarmed.Ability.Bonus.0=Jern Arm Stil
 Unarmed.Ability.Bonus.1=+{0} DMG Upgradering
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Pile Undvignings Chance: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]Afv\u00e6bnings Chance: [[YELLOW]]{0}
-Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]Din modstander har et Jerngreb!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]Dit Jerngreb lod dig modst\u00e5 afv\u00e6bning!
 Unarmed.Ability.Lower=[[GRAY]]**DU S\u00c6NKER DINE N\u00c6VER**
