--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -285,7 +285,7 @@ Unarmed.Ability.Bonus.0=Estilo del Pu\u00f1o de Hierro
 Unarmed.Ability.Bonus.1=+{0} Mejora de DA\u00d1O
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Probabilidad de Desviar Flechas: [[YELLOW]]{0}%
 Unarmed.Ability.Chance.Disarm=[[RED]]Probabilidad de Desarmar: [[YELLOW]]{0}
-Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]Your opponent has an iron grip!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being disarmed!
 Unarmed.Ability.Lower=[[GRAY]]**BAJAS TUS PU\u00d1OS**
