--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -285,7 +285,7 @@ Unarmed.Ability.Bonus.0=Poings de fer
 Unarmed.Ability.Bonus.1=+{0} de d\u00e9g\u00e2ts
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Rejet de fl\u00e8che: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
-Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]Your opponent has an iron grip!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being disarmed!
 Unarmed.Ability.Lower=[[GRAY]]**VOUS ABAISSEZ VOS POINGS**
