--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -285,7 +285,7 @@ Unarmed.Ability.Bonus.0=Stile del Braccio di Ferro
 Unarmed.Ability.Bonus.1=Potenziamento Danno +{0}
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Possibilit\u00e0 di Deviare Freccia: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]Possibilit\u00e0 di Disarmare: [[YELLOW]]{0}
-Unarmed.Ability.Chance.IronGrip=[[RED]]Probabilit\u00e0 di Presa di Ferro: [[YELLOW]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]Probabilit\u00e0 di Presa di Ferro: [[YELLOW]]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]Il tuo avversario ha una presa di ferro!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]La tua presa di ferro ha evitato che venissi disarmato!
 Unarmed.Ability.Lower=[[GRAY]]**ABBASSI I PUGNI**
