--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -285,7 +285,7 @@ Unarmed.Ability.Bonus.0=\u94c1\u8155\u6a21\u5f0f
 Unarmed.Ability.Bonus.1=\u589e\u52a0{0}\u70b9\u4f24\u5bb3
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]\u7bad\u77e2\u504f\u5411\u51e0\u7387: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]\u7f34\u68b0\u51e0\u7387: [[YELLOW]]{0}
-Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]Your opponent has an iron grip!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being disarmed!
 Unarmed.Ability.Lower=[[GRAY]]**\u4f60\u653e\u4e0b\u4e86\u4f60\u7684\u62f3\u5934**
