--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -285,7 +285,7 @@ Unarmed.Ability.Bonus.0=\u0421\u0442\u0438\u043b\u044c \"\u0416\u0435\u043b\u043
 Unarmed.Ability.Bonus.1=\u0423\u0432\u0435\u043b\u0438\u0447\u0435\u043d\u0438\u0435 \u0423\u0440\u043e\u043d\u0430 \u043d\u0430 {0}
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]\u0428\u0430\u043d\u0441 \u043e\u0442\u0440\u0430\u0436\u0435\u043d\u0438\u044f \u0441\u0442\u0440\u0435\u043b: [[YELLOW]]{0} %
 Unarmed.Ability.Chance.Disarm=[[RED]]\u0428\u0430\u043d\u0441 \u0420\u0430\u0437\u043e\u0440\u0443\u0436\u0438\u0442\u044c: [[YELLOW]]{0}
-Unarmed.Ability.Chance.IronGrip=[[RED]]\u0428\u0430\u043d\u0441 \u0416\u0435\u043b\u0435\u0437\u043d\u043e\u0439 \u0425\u0432\u0430\u0442\u043a\u0438: [[YELLOW]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]\u0428\u0430\u043d\u0441 \u0416\u0435\u043b\u0435\u0437\u043d\u043e\u0439 \u0425\u0432\u0430\u0442\u043a\u0438: [[YELLOW]]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]\u0423 \u0432\u0430\u0448\u0435\u0433\u043e \u043e\u043f\u043f\u043e\u043d\u0435\u043d\u0442\u0430 \u0436\u0435\u043b\u0435\u0437\u043d\u0430\u044f \u0445\u0432\u0430\u0442\u043a\u0430!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]\u0412\u0430\u0448\u0430 \u0436\u0435\u043b\u0435\u0437\u043d\u0430\u044f \u0445\u0432\u0430\u0442\u043a\u0430 \u043f\u0440\u0435\u0434\u043e\u0442\u0432\u0440\u0430\u0442\u0438\u043b\u0430 \u0440\u0430\u0437\u043e\u0440\u0443\u0436\u0435\u043d\u0438\u0435!
 Unarmed.Ability.Lower=[[GREEN]]**\u041a\u0423\u041b\u0410\u041a\u0418 \u0412 \u041e\u0411\u042b\u0427\u041d\u041e\u041c \u0421\u041e\u0421\u0422\u041e\u042f\u041d\u0418\u0418**
