Fix typo in Spout notification locale string. Addresses #577

--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -534,7 +534,7 @@ Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Du har stj\u00e5let [[BLUE
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] var ikke i stand til at stj\u00e6le viden fra dig!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] har stj\u00e5let [[BLUE]]{1}[[DARK_RED]] levels fra dig!
 Spout.Donate=[[YELLOW]][mcMMO] Doner!
-Spout.LevelUp.1=[[GREEN]Level Op!
+Spout.LevelUp.1=[[GREEN]]Level Op!
 Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
 Spout.Menu.Exit=[[GRAY]]Tryk p\u00e5 ESCAPE for at forlade!
 Spout.Menu.ExitButton=UDGANG
