--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -609,7 +609,7 @@ Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[
 
 #SPOUT
 Spout.Donate=[[YELLOW]][mcMMO] Donate!
-Spout.LevelUp.1=[[GREEN]Level Up!
+Spout.LevelUp.1=[[GREEN]]Level Up!
 Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
 Spout.Menu.Exit=[[GRAY]]Press ESCAPE to exit!
 Spout.Menu.ExitButton=EXIT
