--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -534,7 +534,7 @@ Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Hai rubato [[BLUE]]{0}[[DA
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] non \u00e8 stato in grado di rubarti conoscenza!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] ti ha rubato [[BLUE]]{1}[[DARK_RED]] livelli!
 Spout.Donate=[[YELLOW]][mcMMO] Fai una donazione!
-Spout.LevelUp.1=[[GREEN]Sei salito di livello!
+Spout.LevelUp.1=[[GREEN]]Sei salito di livello!
 Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
 Spout.Menu.Exit=[[GRAY]]Premi ESC per uscire!
 Spout.Menu.ExitButton=ESCI
