--- a/src/main/resources/locale/locale_no.properties
+++ b/src/main/resources/locale/locale_no.properties
@@ -554,7 +554,7 @@ Smelting.Ability.FluxMining=[[RED]]Flux Mining Chance: [[YELLOW]]{0}
 Smelting.Ability.FuelEfficiency=[[RED]]Fuel Efficiency Multiplier: [[YELLOW]]{0}x
 Smelting.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (VANILLA XP BOOST)
 Smelting.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (FLUX MINING)
-Smelting.Ability.SecondSmelt=[[RED]]Second Smelt Chance: [[YELLOW]{0}
+Smelting.Ability.SecondSmelt=[[RED]]Second Smelt Chance: [[YELLOW]]{0}
 Smelting.Ability.VanillaXPBoost=[[RED]]Vanilla XP Multiplier: [[YELLOW]]{0}x
 Smelting.Effect.0=Fuel Efficiency
 Smelting.Effect.1=Increase the burn time of fuel used in furnaces when smelting
