Fixed abilities activating with the wrong tool in hand

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -20,7 +20,8 @@ Version 1.4.00-dev
  = Fixed Woodcutting accidentally using Mining double drop values.
  = Fixed Hylian Luck not removing the block-placed flag from flowers.
  = Fixed Hylian Luck not checking the block-placed flag on flowers.
- = Fixed Leaf Blower not respected the unlock level set in advanced.yml
+ = Fixed Leaf Blower not respecting the unlock level set in advanced.yml
+ = Fixed abilities activating with the wrong tool in hand
  ! Changed how Berserk handles not picking up items to avoid listening to PlayerPickupItemEvent
  ! Moved Hylian Luck into a separate listener since it actually cancels the event and shouldn't just be on MONITOR.
  ! Changed how Tree Feller is handled, it should now put less stress on the CPU
